--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1150,6 +1150,23 @@ input.error, select.error, textarea.error, span.error {
 }
 */
  
+.slide-wrap .slide-content .slide-form {
+	margin-top:50px;
+	background-color: #ffffff59;
+	border-radius: 5px;
+}
+.slide-wrap .slide-content .slide-form .total {
+	border-top: 1px solid #ccc;
+}
+.slide-wrap .slide-content .slide-form .total .total-label {
+	font-weight: 600;
+	vertical-align: middle;
+}
+.slide-wrap .slide-content .slide-form .total .total_price {
+	font-weight: 600;
+	color: red;
+	font-size:30px;
+}
 .slide-wrap .slide-content .search-widget {
 	background: rgba(0,0,0, .7);
 	color: #fff;
