--- a/template/css/style.css
+++ b/template/css/style.css
@@ -4679,7 +4679,10 @@ ul.list-embassy li {
 	  	margin-bottom: 40px;
 	}
 	.slide-wrap .slide-content .slide-text h1 {
-		margin-top: 70px;
+		margin-top: 50px;
+	}
+	.slide-wrap .slide-content .slide-form {
+		margin-top: 20px;
 	}
 	.comments .content-list {
 		padding: 0;
